[gd_scene load_steps=27 format=3 uid="uid://c8lrdgmd6qf5j"]

[ext_resource type="Script" path="res://addons/ez_sound/ez_sound_gui.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cgvxc3xe4do8w" path="res://addons/ez_sound/button.tscn" id="2_o1k56"]
[ext_resource type="PackedScene" uid="uid://cdec885hs0wvi" path="res://addons/ez_sound/draggable.tscn" id="2_rekar"]
[ext_resource type="Script" path="res://addons/ez_sound/draggable.gd" id="3_el6kb"]
[ext_resource type="SystemFont" uid="uid://byg5ahufgk4gv" path="res://addons/ez_sound/font_bold.tres" id="3_oxv0x"]
[ext_resource type="Texture2D" uid="uid://bh315ln8l5f38" path="res://addons/ez_sound/copy (1).png" id="5_4kpui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_utmbd"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0, 0, 0, 0.184314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bkhsu"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.64155, 0.2262, 0.78, 0.721569)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ytxcn"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.700853, 0.291251, 0.843301, 0.827451)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0rpre"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 5.0
content_margin_right = 0.0
content_margin_bottom = 5.0

[sub_resource type="ButtonGroup" id="ButtonGroup_6phaw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_or6rn"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 5.0
content_margin_right = 0.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_05hko"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 5.0
content_margin_right = 0.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r8ei5"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 5.0
content_margin_right = 0.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8lfmw"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 5.0
content_margin_right = 0.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ajus8"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 5.0
content_margin_right = 0.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qpgw6"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 5.0
content_margin_right = 0.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_if7h3"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 5.0
content_margin_right = 0.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkhpk"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 5.0
content_margin_right = 0.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cyw34"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 5.0
content_margin_right = 0.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w2gpq"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 5.0
content_margin_right = 0.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_afdod"]
bg_color = Color(0.86, 0.4042, 0.730857, 0.223529)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hbhit"]
bg_color = Color(1, 0.82, 0.1, 0)
draw_center = false
border_width_right = 5
border_color = Color(1, 0.819608, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_533wf"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.780273, 0.634781, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gmdps"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.6, 0.49, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r00g0"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.958388, 0.78187, 7.70092e-07, 1)

[node name="EZ Sound" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
clip_contents = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
auto_translate_mode = 1
visible = false
layout_mode = 2

[node name="btn_dir" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_o1k56")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="btn_reload" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_o1k56")]
unique_name_in_owner = true
layout_mode = 2
text = "Reload"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 20

[node name="label_dir" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.28119, 0.779158, 0.510497, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.32549)
theme_override_fonts/font = ExtResource("3_oxv0x")
theme_override_font_sizes/font_size = 15
text = "res://sounds/"
horizontal_alignment = 1

[node name="scroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_utmbd")
horizontal_scroll_mode = 0
scroll_deadzone = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/scroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="label_no_dir" type="Label" parent="MarginContainer/VBoxContainer/scroll/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.938671, 0.117006, 0.20342, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.027451)
text = "Select Sounds Dir"
horizontal_alignment = 1

[node name="label_no_sounds" type="Label" parent="MarginContainer/VBoxContainer/scroll/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.938671, 0.117006, 0.20342, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.027451)
text = "No Sounds in Selected Dir"
horizontal_alignment = 1

[node name="sound_list" type="VBoxContainer" parent="MarginContainer/VBoxContainer/scroll/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="draggable" type="Button" parent="MarginContainer/VBoxContainer/scroll/VBoxContainer/sound_list" instance=ExtResource("2_rekar")]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/hover = SubResource("StyleBoxFlat_ytxcn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0rpre")
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_6phaw")
text_overrun_behavior = 1
clip_text = true
script = ExtResource("3_el6kb")

[node name="@Button@248347" type="Button" parent="MarginContainer/VBoxContainer/scroll/VBoxContainer/sound_list" instance=ExtResource("2_rekar")]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/hover = SubResource("StyleBoxFlat_ytxcn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_or6rn")
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_6phaw")
text_overrun_behavior = 1
clip_text = true
script = ExtResource("3_el6kb")

[node name="@Button@248348" type="Button" parent="MarginContainer/VBoxContainer/scroll/VBoxContainer/sound_list" instance=ExtResource("2_rekar")]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/hover = SubResource("StyleBoxFlat_ytxcn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_05hko")
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_6phaw")
text_overrun_behavior = 1
clip_text = true
script = ExtResource("3_el6kb")

[node name="@Button@248349" type="Button" parent="MarginContainer/VBoxContainer/scroll/VBoxContainer/sound_list" instance=ExtResource("2_rekar")]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/hover = SubResource("StyleBoxFlat_ytxcn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_r8ei5")
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_6phaw")
text_overrun_behavior = 1
clip_text = true
script = ExtResource("3_el6kb")

[node name="@Button@248350" type="Button" parent="MarginContainer/VBoxContainer/scroll/VBoxContainer/sound_list" instance=ExtResource("2_rekar")]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/hover = SubResource("StyleBoxFlat_ytxcn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8lfmw")
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_6phaw")
text_overrun_behavior = 1
clip_text = true
script = ExtResource("3_el6kb")

[node name="@Button@248351" type="Button" parent="MarginContainer/VBoxContainer/scroll/VBoxContainer/sound_list" instance=ExtResource("2_rekar")]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/hover = SubResource("StyleBoxFlat_ytxcn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ajus8")
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_6phaw")
text_overrun_behavior = 1
clip_text = true
script = ExtResource("3_el6kb")

[node name="@Button@248352" type="Button" parent="MarginContainer/VBoxContainer/scroll/VBoxContainer/sound_list" instance=ExtResource("2_rekar")]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/hover = SubResource("StyleBoxFlat_ytxcn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_qpgw6")
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_6phaw")
text_overrun_behavior = 1
clip_text = true
script = ExtResource("3_el6kb")

[node name="@Button@248353" type="Button" parent="MarginContainer/VBoxContainer/scroll/VBoxContainer/sound_list" instance=ExtResource("2_rekar")]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/hover = SubResource("StyleBoxFlat_ytxcn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_if7h3")
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_6phaw")
text_overrun_behavior = 1
clip_text = true
script = ExtResource("3_el6kb")

[node name="@Button@248354" type="Button" parent="MarginContainer/VBoxContainer/scroll/VBoxContainer/sound_list" instance=ExtResource("2_rekar")]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/hover = SubResource("StyleBoxFlat_ytxcn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jkhpk")
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_6phaw")
text_overrun_behavior = 1
clip_text = true
script = ExtResource("3_el6kb")

[node name="@Button@248355" type="Button" parent="MarginContainer/VBoxContainer/scroll/VBoxContainer/sound_list" instance=ExtResource("2_rekar")]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/hover = SubResource("StyleBoxFlat_ytxcn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_cyw34")
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_6phaw")
text_overrun_behavior = 1
clip_text = true
script = ExtResource("3_el6kb")

[node name="@Button@248356" type="Button" parent="MarginContainer/VBoxContainer/scroll/VBoxContainer/sound_list" instance=ExtResource("2_rekar")]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/hover = SubResource("StyleBoxFlat_ytxcn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bkhsu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_w2gpq")
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_6phaw")
text_overrun_behavior = 1
clip_text = true
script = ExtResource("3_el6kb")

[node name="sp" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="stream_bar" type="ProgressBar" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 62.0
offset_top = 699.0
offset_right = 1214.0
offset_bottom = 726.0
mouse_filter = 1
theme_override_styles/background = SubResource("StyleBoxFlat_afdod")
theme_override_styles/fill = SubResource("StyleBoxFlat_hbhit")
value = 33.4
show_percentage = false

[node name="button_copy" type="Button" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
visible = false
layout_mode = 2
offset_left = 1132.0
offset_right = 1152.0
offset_bottom = 20.0
focus_mode = 0
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_constants/icon_max_width = 15
theme_override_styles/hover = SubResource("StyleBoxFlat_533wf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gmdps")
theme_override_styles/normal = SubResource("StyleBoxFlat_r00g0")
icon = ExtResource("5_4kpui")
icon_alignment = 1

[node name="filedialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Select Sounds Folder"
initial_position = 2
size = Vector2i(303, 600)
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
